Add more page styling

--- a/components/hero/hero.module.css
+++ b/components/hero/hero.module.css
@@ -3,6 +3,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 100vh;
+}
 
-    height: 400px;
+.hero h1 {
+    padding: 0 20%;
 }
