--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -1,11 +1,15 @@
 .header {
+    position: sticky;
+    top: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 20px 0 20px;
+    padding: 20px;
+    border-bottom: 2px solid;
+    width: 100%;
 }
 
 .header nav {
     display: flex;
-    gap: 10px;
+    gap: 20px;
 }
