--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -2,8 +2,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    height: 10%;
     padding: 20px;
-    width: 100%;
 }
 
 .header nav {
