--- a/components/hero/hero.module.css
+++ b/components/hero/hero.module.css
@@ -1,11 +1,18 @@
 .hero {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-    height: 100vh;
+    height: 90%;
 }
 
 .hero h1 {
-    padding: 0 20%;
+    text-align: center;
+    max-width: 60%;
+    border: solid 2px;
+    padding: 10%;
+}
+
+.hero h2 {
+    max-width: 60%;
 }
