--- a/styles/global.css
+++ b/styles/global.css
@@ -65,10 +65,7 @@ p {
 }
 
 a {
+    font-size: 16px;
     color: black;
-    text-decoration: none;
-}
-
-a:hover {
     text-decoration: underline 2px;
 }
