--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 10%;
+    height: 10vh;
     padding: 20px;
 }
 
