--- a/components/hero/hero.module.css
+++ b/components/hero/hero.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    height: 90%;
+    height: 90vh;
 }
 
 .hero h1 {
