Refactored some development changes for production

--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -6,11 +6,11 @@
     padding: 20px;
 }
 
-.header nav {
+/* .header nav {
     display: flex;
     gap: 20px;
 }
 
 .header a {
     font-size: 20px;
-}
+} */
