Change selection color

--- a/styles/global.css
+++ b/styles/global.css
@@ -69,3 +69,8 @@ a {
     color: black;
     text-decoration: underline 2px;
 }
+
+::selection {
+    color: white;
+    background-color: black;
+}
