Refactor About Section into smaller components

--- a/components/AboutSection/AboutSection.module.css
+++ b/components/AboutSection/AboutSection.module.css
@@ -19,65 +19,10 @@
     border: 2px solid;
 }
 
-.skills {
-    grid-area: skills;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    padding: 25px;
-    border: 2px solid;
-}
-
-.skillsList {
-    list-style-type: none;
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    gap: 10px;
-    padding: 0;
-}
-
-.skillsList li {
-    text-align: center;
-    padding: 20px;
-    border-radius: 10px;
-    color: white;
-    background-color: black;
-    min-width: fit-content;
-    cursor: pointer;
-    border: 2px solid black;
-}
-
-.skillsList li:hover {
-    color: black;
-    background-color: white;
-}
-
-.info {
-    grid-area: info;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 25px;
-    border: 2px solid;
-}
-
-@media (max-width: 576px) {
+@media (max-width: 800px) {
     .aboutSection {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .about {
-        height: 50%;
-    }
-
-    .skills {
-        height: 50%;
-    }
-
-    .info {
-        display: none;
+        grid-template-areas:
+            'about about'
+            'skills skills';
     }
 }
