--- a/components/InfoBox/InfoBox.module.css
+++ b/components/InfoBox/InfoBox.module.css
@@ -23,6 +23,7 @@
 @media (max-width: 800px) {
     .top {
         flex-direction: column;
-        justify-content: flex-start;
+        justify-content: center;
+        align-items: flex-start;
     }
 }
