More work on skills design

--- a/components/InfoBox/InfoBox.module.css
+++ b/components/InfoBox/InfoBox.module.css
@@ -25,6 +25,6 @@
     .top {
         flex-direction: column;
         justify-content: center;
-        align-items: flex-start;
+        align-items: center;
     }
 }
