--- a/components/SkillList/SkillList.module.css
+++ b/components/SkillList/SkillList.module.css
@@ -2,6 +2,8 @@
     list-style-type: none;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
     gap: 10px;
     padding: 0;
 }
