--- a/components/SkillList/SkillItem/SkillItem.module.css
+++ b/components/SkillList/SkillItem/SkillItem.module.css
@@ -1,14 +1,16 @@
-.button {
+.item {
+    flex: 1;
+    min-width: fit-content;
     display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
     padding: 10px;
     color: black;
     background-color: white;
-    border: 1px solid black;
     border-radius: 10px;
 }
 
-.button:hover {
-    color: white;
-    background-color: black;
+.name {
+    text-align: center;
 }
