Add icons and change header to icon

--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -3,12 +3,5 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 25px;
-}
-
-@media (max-width: 800px) {
-    .header {
-        flex-direction: column;
-        justify-content: center;
-    }
+    padding: 50px;
 }
