--- a/components/Hero/Hero.module.css
+++ b/components/Hero/Hero.module.css
@@ -8,12 +8,18 @@
 
 .hero h1 {
     text-align: center;
-    max-width: 60%;
+    max-width: 50%;
     border: solid 2px;
-    padding: 8%;
+    padding: 5%;
 }
 
 .hero p {
     font-size: 28px;
     max-width: 60%;
+}
+
+@media (max-width: 700px) {
+    .hero p {
+        font-size: 24px;
+    }
 }
