--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -1,6 +1,14 @@
 .footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 25px;
+    padding-bottom: 25px;
+}
+
+.copyright {
+    text-align: center;
 }
