--- a/components/InfoBox/InfoBox.module.css
+++ b/components/InfoBox/InfoBox.module.css
@@ -3,13 +3,13 @@
     display: flex;
     flex-direction: column;
     gap: 25px;
-    padding: 25px;
 }
 
 .top {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-top: 25px;
     border-bottom: 2px dotted black;
 }
 
@@ -22,7 +22,7 @@
     opacity: 0.5;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 700px) {
     .top {
         flex-direction: column;
         justify-content: center;
