--- a/components/Section/Hero/Hero.module.css
+++ b/components/Section/Hero/Hero.module.css
@@ -1,18 +1,8 @@
 .heroSection {
-    display: flex;
-    flex-direction: column;
-    padding-top: 25px;
-    height: 100vh;
-}
-
-.main {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
+    position: relative;
     justify-content: center;
     align-items: center;
     gap: 50px;
-    padding: 0 50px;
 }
 
 .title {
