--- a/styles/global.css
+++ b/styles/global.css
@@ -71,7 +71,11 @@ p {
 a {
     font-size: 16px;
     color: black;
-    text-decoration: underline 2px;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: 2px underline;
 }
 
 ::selection {
