--- a/components/Section/Hero/Hero.module.css
+++ b/components/Section/Hero/Hero.module.css
@@ -6,12 +6,17 @@
 }
 
 .title {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     font-size: 36px;
+    line-height: 40px;
     text-align: center;
-    max-width: 60%;
+    height: 15vh;
 }
 
 .text {
     font-size: 24px;
-    width: 80%;
+    max-width: 80%;
 }
