--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -16,17 +16,17 @@
     line-height: 8vh;
     text-align: center;
     text-decoration: none;
-    color: white;
-    background-color: black;
+    color: var(--background-color);
+    background-color: var(--color);
     border-radius: 5px;
-    border: 2px solid black;
+    border: 2px solid var(--color);
 
     transition: all 0.2s ease;
 }
 
 .logo:hover {
-    color: black;
-    background-color: white;
+    color: var(--color);
+    background-color: var(--background-color);
     text-decoration: none;
 }
 
