--- a/components/SkillList/SkillItem/SkillItem.module.css
+++ b/components/SkillList/SkillItem/SkillItem.module.css
@@ -6,8 +6,8 @@
     justify-content: center;
     align-items: center;
     padding: 10px;
-    color: black;
-    background-color: white;
+    color: var(--color);
+    background-color: var(--background);
     border-radius: 10px;
 }
 
