--- a/styles/global.css
+++ b/styles/global.css
@@ -101,8 +101,8 @@ a:hover {
 }
 
 ::selection {
-    color: var(--color);
-    background-color: var(--background-color);
+    color: var(--background-color);
+    background-color: var(--color);
 }
 
 @media (max-width: 700px) {
