Add focus pseudo element to buttons and links

--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -24,7 +24,8 @@
     transition: all 0.2s ease;
 }
 
-.logo:hover {
+.logo:hover,
+.logo:focus {
     color: var(--color);
     background-color: var(--background-color);
     text-decoration: none;
