css hover state was unintended behaviour

--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -24,8 +24,7 @@
     transition: all 0.2s ease;
 }
 
-.logo:hover,
-.logo:focus {
+.logo:hover {
     color: var(--color);
     background-color: var(--background-color);
     text-decoration: none;
