--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -44,3 +44,31 @@
     gap: 25px;
     padding: 0;
 }
+
+.link {
+    background: none;
+    position: relative;
+}
+
+.link:hover {
+    text-decoration: none;
+    color: var(--background-color);
+}
+
+.link::before {
+    background-color: var(--color);
+    content: '';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform 0.5s ease;
+    z-index: -1;
+}
+
+.link:hover::before {
+    transform: scaleX(1);
+}
