Remove absolute positioning from navbar

--- a/components/Section/Hero/Hero.module.css
+++ b/components/Section/Hero/Hero.module.css
@@ -1,5 +1,12 @@
 .heroSection {
-    position: relative;
+    display: flex;
+    flex-direction: column;
+}
+
+.hero {
+    height: 90vh;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 50px;
