--- a/components/SkillList/SkillList.module.css
+++ b/components/SkillList/SkillList.module.css
@@ -10,3 +10,10 @@
 
     list-style: none;
 }
+
+@media (max-width: 700px) {
+    .skillList {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+}
