--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -48,8 +48,32 @@
 }
 
 .link {
+    position: relative;
+    padding: 5px;
 }
 
 .link:hover {
     text-decoration: none;
+}
+
+.link::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
+    width: 100%;
+    height: 3px;
+
+    background-color: var(--color);
+
+    transform: scaleX(0);
+    transform-origin: bottom right;
+
+    transition: transform 0.3s ease;
+}
+
+.link:hover::after {
+    transform-origin: bottom left;
+    transform: scaleX(1);
 }
