--- a/styles/BlogPost.module.css
+++ b/styles/BlogPost.module.css
@@ -6,10 +6,8 @@
 }
 
 .postSection {
-    position: relative;
+    min-height: 80vh;
 
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
 }
