--- a/components/Section/Project/Project.module.css
+++ b/components/Section/Project/Project.module.css
@@ -22,10 +22,6 @@
 }
 
 .repoItem {
-    display: flex;
-}
-
-.repoLink {
     flex: 1;
     padding: 10px;
 
@@ -38,14 +34,46 @@
     transition: border 0.2s ease;
 }
 
-.repoLink:hover {
-    text-decoration: none;
-
+.repoItem:hover {
     border-color: var(--color);
 }
 
-.repoName {
-    flex: 1;
+.repoTop {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.repoLink {
+    position: relative;
+
+    padding: 3px;
+}
+
+.repoLink:hover {
+    text-decoration: none;
+}
+
+.repoLink::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
+    width: 100%;
+    height: 3px;
+
+    background-color: var(--color);
+
+    transform: scaleX(0);
+    transform-origin: bottom right;
+
+    transition: transform 0.3s ease;
+}
+
+.repoLink:hover::after {
+    transform-origin: bottom left;
+    transform: scaleX(1);
 }
 
 .repoInfoBox {
