--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -10,16 +10,16 @@
     width: 10vh;
     height: 10vh;
 
-    border-radius: 5px;
-    border: 2px solid var(--color);
-
     font-size: 48px;
-    line-height: 8vh;
+    line-height: 7.75vh;
     text-align: center;
     text-decoration: none;
 
+    border: solid 3px var(--highlight-color);
+    border-radius: 5px;
+
     color: var(--background-color);
-    background-color: var(--color);
+    background-color: var(--highlight-color);
 
     transition: all 0.2s ease;
 }
@@ -27,7 +27,7 @@
 .logoLink:hover {
     text-decoration: none;
 
-    color: var(--color);
+    color: var(--highlight-color);
     background-color: var(--background-color);
 }
 
@@ -49,7 +49,10 @@
 
 .link {
     position: relative;
-    padding: 5px;
+
+    padding: 3px;
+
+    color: var(--highlight-color);
 }
 
 .link:hover {
@@ -65,7 +68,7 @@
     width: 100%;
     height: 3px;
 
-    background-color: var(--color);
+    background-color: var(--highlight-color);
 
     transform: scaleX(0);
     transform-origin: bottom right;
