--- a/components/ThemeToggle/ThemeToggle.module.css
+++ b/components/ThemeToggle/ThemeToggle.module.css
@@ -1,22 +1,20 @@
 .button {
-    color: var(--color);
-    background-color: var(--background-color);
-    border: 2px solid var(--color);
-    border-radius: 5px;
     width: 80px;
+
     padding: 5px;
+
     cursor: pointer;
+
+    border: solid 3px var(--highlight-color);
+    border-radius: 5px;
+
+    color: var(--highlight-color);
+    background-color: var(--background-color);
 
     transition: all 0.2s ease;
 }
 
 .button:hover {
     color: var(--background-color);
-    background-color: var(--color);
-}
-
-@media (max-width: 700px) {
-    .button {
-        display: none;
-    }
+    background-color: var(--highlight-color);
 }
