--- a/components/InfoBox/InfoBox.module.css
+++ b/components/InfoBox/InfoBox.module.css
@@ -3,17 +3,16 @@
 
     display: flex;
     flex-direction: column;
-    gap: 25px;
 }
 
 .top {
-    padding-top: 25px;
+    min-height: 10vh;
 
     display: flex;
     justify-content: space-between;
     align-items: center;
 
-    border-bottom: 2px dotted var(--color);
+    border-bottom: dotted 3px var(--color);
 
     text-align: center;
 }
@@ -22,7 +21,6 @@
     .top {
         flex-direction: column;
         justify-content: center;
-        align-items: center;
-        gap: 5px;
+        gap: 1rem;
     }
 }
