--- a/components/Section/About/About.module.css
+++ b/components/Section/About/About.module.css
@@ -1,5 +1,13 @@
+.aboutMeBox {
+    min-height: 40vh;
+
+    padding: 1rem;
+}
+
 .skillBox {
-    flex: 1;
+    min-height: 40vh;
+
+    padding: 1rem;
 
     display: flex;
     flex-direction: column;
