--- a/components/Section/Contact/Contact.module.css
+++ b/components/Section/Contact/Contact.module.css
@@ -1,9 +1,7 @@
-.contactSection {
-    height: 95vh;
-}
-
 .contactBox {
-    flex: 1;
+    min-height: 85vh;
+
+    padding: 1rem;
 
     display: flex;
     flex-direction: column;
@@ -12,35 +10,34 @@
 }
 
 .contactList {
-    margin: 0;
-    padding: 0;
-
     display: flex;
     flex-direction: column;
-    gap: 50px;
-
-    list-style-type: none;
+    gap: 4rem;
 }
 
 .link {
-    padding: 10px;
+    padding: 1rem;
 
     display: flex;
     align-items: center;
-
-    text-decoration: none;
 
     border: solid 3px var(--highlight-color);
     border-radius: 5px;
 
     color: var(--highlight-color);
 
-    transition: all 0.2s ease;
+    transition: color 0.3s ease;
+    transition: background-color 0.3s ease;
 }
 
 .link:hover {
-    text-decoration: none;
-
     color: var(--background-color);
     background-color: var(--highlight-color);
+}
+
+@media (max-width: 700px) {
+    .link {
+        color: var(--background-color);
+        background-color: var(--highlight-color);
+    }
 }
