--- a/components/SkillList/SkillList.module.css
+++ b/components/SkillList/SkillList.module.css
@@ -1,14 +1,9 @@
 .skillList {
-    margin: 0;
-    padding: 0;
-
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    gap: 25px;
-
-    list-style: none;
+    gap: 2rem;
 }
 
 @media (max-width: 700px) {
