--- a/components/ThemeToggle/ThemeToggle.module.css
+++ b/components/ThemeToggle/ThemeToggle.module.css
@@ -1,7 +1,7 @@
 .button {
-    width: 80px;
+    width: 8rem;
 
-    padding: 5px;
+    padding: 0.5rem;
 
     cursor: pointer;
 
@@ -11,7 +11,8 @@
     color: var(--highlight-color);
     background-color: var(--background-color);
 
-    transition: all 0.2s ease;
+    transition: color 0.3s ease;
+    transition: background-color 0.3s ease;
 }
 
 .button:hover {
