--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -20,8 +20,7 @@
     color: var(--background-color);
     background-color: var(--highlight-color);
 
-    transition: color 0.3s ease;
-    transition: background-color 0.3s ease;
+    transition: color 0.3s, background 0.3s;
 }
 
 .logoLink:hover {
@@ -65,7 +64,7 @@
     transform: scaleX(0);
     transform-origin: bottom right;
 
-    transition: transform 0.3s ease;
+    transition: transform 0.3s;
 }
 
 .link:hover::after {
