--- a/components/Section/Contact/Contact.module.css
+++ b/components/Section/Contact/Contact.module.css
@@ -26,8 +26,7 @@
 
     color: var(--highlight-color);
 
-    transition: color 0.3s ease;
-    transition: background-color 0.3s ease;
+    transition: color 0.3s, background 0.3s;
 }
 
 .link:hover {
