--- a/components/Section/Hero/Hero.module.css
+++ b/components/Section/Hero/Hero.module.css
@@ -5,7 +5,14 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 4rem;
+}
+
+.heroTitleContainer {
+    flex: 3;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .heroTitle {
@@ -33,8 +40,51 @@
 }
 
 .heroText {
+    flex: 3;
+
     max-width: 80%;
     font-size: 24px;
+}
+
+.heroHint {
+    position: relative;
+
+    flex: 1;
+
+    max-width: 80vw;
+
+    padding: 1rem;
+
+    text-align: center;
+
+    color: var(--highlight-color);
+}
+
+.heroHint::before {
+    content: '';
+
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
+    z-index: -1;
+
+    width: 100%;
+    height: 100%;
+
+    border: solid 3px var(--highlight-color);
+    border-radius: 5px;
+
+    transform: scale(0);
+    transform-origin: bottom right;
+
+    transition: transform 0.3s;
+}
+
+.heroHint:hover::before,
+.heroHint:active::before {
+    transform: scale(1);
+    transform-origin: top left;
 }
 
 @media (max-width: 700px) {
