--- a/styles/BlogPost.module.css
+++ b/styles/BlogPost.module.css
@@ -11,3 +11,9 @@
     display: flex;
     flex-direction: column;
 }
+
+@media (max-width: 700px) {
+    .page {
+        padding: 0 1rem;
+    }
+}
