--- a/components/SkillList/SkillItem/SkillItem.module.css
+++ b/components/SkillList/SkillItem/SkillItem.module.css
@@ -1,11 +1,17 @@
 .item {
     flex: 1;
+
     min-width: fit-content;
+
+    padding: 0.5rem;
 
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    border: solid 3px var(--color);
+    border-radius: 10px;
 
     color: var(--color);
     background-color: var(--background-color);
