--- a/components/Section/Project/Project.module.css
+++ b/components/Section/Project/Project.module.css
@@ -38,8 +38,10 @@
     flex: 1;
 
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
+    gap: 1rem;
 }
 
 .repoName {
@@ -108,7 +110,7 @@
     background-color: var(--color);
 }
 
-@media (max-width: 700px) {
+@media (max-width: 800px) {
     .repoList {
         display: flex;
         flex-direction: column;
@@ -116,17 +118,6 @@
 
     .repoItem {
         border-color: var(--color);
-    }
-
-    .repoTop {
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 1rem;
-    }
-
-    .repoName {
-        width: 100%;
     }
 
     .repoLink::after {
