--- a/styles/global.css
+++ b/styles/global.css
@@ -116,3 +116,26 @@ a {
     color: var(--background-color);
     background-color: var(--color);
 }
+
+#__next {
+    height: 100%;
+
+    isolation: isolate;
+}
+
+@media (prefers-reduced-motion: reduce) {
+    html:focus-within {
+        scroll-behavior: auto;
+    }
+
+    *,
+    *::before,
+    *::after {
+        scroll-behavior: auto !important;
+
+        animation-duration: 0.01ms !important;
+        animation-iteration-count: 1 !important;
+
+        transition-duration: 0.01ms !important;
+    }
+}
